2017-01-25         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Comment out stuff about awk.info, since that
	domain is now gone.

2016-11-10         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Fix example use of dcngegttext.
	Thanks to Sergey Tselikh <stselikh@gmail.com>
	for the report.

2016-11-08         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in, wordlist: Typo fix. ECBDIC --> EBCDIC.
	Thanks to Sergey Tselikh <stselikh@gmail.com> for the report.
	(bitwise-ops): Put table in @verbatim instead of @display.
	Works better for Info, text, and HTML. Thanks to
	Marco Curreli <marcocurreli@tiscali.it> for the report.

2016-10-23         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Remove references to MS-DOS and OS/2,
	simplify the whole section on PC operating systems.

2016-10-02         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Bugs): Rework this section and break into
	subsections, mainly to emphasize that I no longer
	read comp.lang.awk.

2016-09-20         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Group Functions): Typo fix. Reported
	by Jaromir Obr <jaromir.obr@gmail.com>.
	(Time Functions): Slightly enhance description of ISO 8601
	definition of first and last weeks. Thanks to
	Michel de Ruiter <mdruiter@gmail.com> for the note.

2016-08-25         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.4: Release tar ball made.

2016-08-24         Arnold D. Robbins     <arnold@skeeve.com>

	* wordlist: Add more words.

2016-08-23         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): Add new file, wordlist.
	(spell): New target.
	* wordlist: New file.
	* gawktexi.in: Fix typos, adjust update date.
	* awkcard.in: Update copyright years.

2016-08-01         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Mark DJGPP port as unsupported.

2016-07-24         Arnold D. Robbins     <arnold@skeeve.com>
