@@ -1,6 +1,6 @@
 This is gawk.info, produced by makeinfo version 6.1 from gawk.texi.
 
-Copyright (C) 1989, 1991, 1992, 1993, 1996-2005, 2007, 2009-2016
+Copyright (C) 1989, 1991, 1992, 1993, 1996-2005, 2007, 2009-2017
 Free Software Foundation, Inc.
 
 
@@ -37,7 +37,7 @@ General Introduction
 This file documents 'awk', a program that you can use to select
 particular records in a file and perform operations upon them.
 
-   Copyright (C) 1989, 1991, 1992, 1993, 1996-2005, 2007, 2009-2016
+   Copyright (C) 1989, 1991, 1992, 1993, 1996-2005, 2007, 2009-2017
 Free Software Foundation, Inc.
 
 
