@@ -1,3 +1,7 @@
+2017-01-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Update UPDATE-MONTH and copyright years.
+
 2017-01-25         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Comment out stuff about awk.info, since that
